# pipewire-rs

./: .gitlab-ci.yml  Cargo.toml  README.md
docs/: CONTRIBUTING.md  guidelines_for_bindings.md
libspa/: Cargo.toml
libspa-sys/: Cargo.toml  build.rs
libspa-sys/src/: lib.rs  param_audio.c  type-info.c  type_info.rs
libspa-sys/src/debug/: mod.rs  pod.c  pod.rs
libspa-sys/src/pod/: builder.c  builder.rs  iter.c  iter.rs  mod.rs  parser.c  parser.rs
libspa-sys/src/utils/: mod.rs  ringbuffer.c  ringbuffer.rs
libspa/src/: audio.rs  data.rs  dict.rs  lib.rs  result.rs
libspa/src/buffer/: mod.rs
libspa/src/format/: mod.rs
libspa/src/param/: format_utils.rs  mod.rs
libspa/src/param/audio/: mod.rs  raw.rs
libspa/src/param/video/: raw.rs
libspa/src/pod/: builder.rs  deserialize.rs  mod.rs  parser.rs  serialize.rs
libspa/src/utils/: dict.rs  mod.rs  result.rs
libspa/tests/: pod.c  pod.rs
pipewire/: Cargo.toml
pipewire-sys/: Cargo.toml  build.rs
pipewire/examples/: audio-capture.rs  create-delete-remote-objects.rs  pw-mon.rs  roundtrip.rs  streams.rs  tone.rs
pipewire/src/: buffer.rs  channel.rs  client.rs  context.rs  core.rs  core_.rs  device.rs  error.rs  factory.rs  keys.rs  lib.rs  link.rs  loop_.rs  main_loop.rs  metadata.rs  module.rs  node.rs  permissions.rs  port.rs  properties.rs  proxy.rs  registry.rs  stream.rs  thread_loop.rs
