[package]
name = "pipewire"
version = "0.8.0"
authors = ["Tom Wagner <tom.a.wagner@protonmail.com", "Guillaume Desmottes <guillaume.desmottes@collabora.com>"]
rust-version = "1.65"
edition = "2021"
categories = ["api-bindings", "multimedia"]
description = "Rust bindings for PipeWire"
repository = "https://gitlab.freedesktop.org/pipewire/pipewire-rs"
license = "MIT"
readme = "README.md"
homepage = "https://pipewire.org"
documentation = "https://pipewire.pages.freedesktop.org/pipewire-rs/pipewire/"
keywords = ["pipewire", "multimedia", "audio", "video"]

[dependencies]
pw_sys = { package = "pipewire-sys", version = "0.8", path = "../pipewire-sys" }
spa_sys = { package = "libspa-sys", version = "0.8", path = "../libspa-sys" }
spa = { package = "libspa", version = "0.8", path = "../libspa" }
anyhow = "1"
thiserror = "1"
libc = "0.2"
nix = { version = "0.27", features = ["signal", "fs"] }
bitflags = "2"
once_cell = "1.0"

[dev-dependencies]
clap = { version = "4.3.2", features = ["derive"] }
once_cell = "1.5"

[features]
v0_3_32 = []
v0_3_33 = ["spa/v0_3_33", "v0_3_32"]
v0_3_34 = ["v0_3_33"]
v0_3_39 = ["v0_3_34"]
v0_3_40 = ["v0_3_39"]
v0_3_41 = ["v0_3_40"]
v0_3_43 = ["v0_3_41"]
v0_3_44 = ["v0_3_43"]
v0_3_45 = ["v0_3_44"]
v0_3_49 = ["v0_3_45"]
v0_3_53 = ["v0_3_49"]
v0_3_57 = ["v0_3_53"]
v0_3_64 = ["v0_3_57"]
v0_3_65 = ["spa/v0_3_65", "v0_3_64"]
v0_3_77 = ["v0_3_65"]
